--- a/AutoML.ipynb
+++ b/AutoML.ipynb
@@ -1,6 +1,81 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "79d4e3b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.datasets import load_iris\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "import joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ab36087c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Base Class for Dataset Handling\n",
+    "class Dataset:\n",
+    "    def __init__(self):\n",
+    "        self.data = None\n",
+    "        self.target = None\n",
+    "        self.X_train = None\n",
+    "        self.X_test = None\n",
+    "        self.y_train = None\n",
+    "        self.y_test = None\n",
+    "\n",
+    "    def load_data(self):\n",
+    "        # Load Iris dataset\n",
+    "        iris = load_iris()\n",
+    "        self.data = iris.data\n",
+    "        self.target = iris.target\n",
+    "\n",
+    "    def preprocess(self):\n",
+    "        # Train-test split\n",
+    "        self.X_train, self.X_test, self.y_train, self.y_test = train_test_split(\n",
+    "            self.data, self.target, test_size=0.2, random_state=42\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6fba685",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.11"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
