--- a/AutoML.ipynb
+++ b/AutoML.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "79d4e3b8",
+   "id": "6807f7ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ab36087c",
+   "id": "a07e2082",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,8 +50,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "1866fb33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Base Class for Model Selection and Tuning\n",
+    "class ModelSelector:\n",
+    "    def __init__(self):\n",
+    "        self.models = {\n",
+    "            'RandomForest': RandomForestClassifier(),\n",
+    "            'SVM': SVC(),\n",
+    "            'LogisticRegression': LogisticRegression(max_iter=200)\n",
+    "        }\n",
+    "        self.best_model = None\n",
+    "\n",
+    "    def hyperparameter_tuning(self, model, param_grid, X_train, y_train):\n",
+    "        grid_search = GridSearchCV(model, param_grid, cv=5, n_jobs=-1, verbose=1)\n",
+    "        grid_search.fit(X_train, y_train)\n",
+    "        return grid_search.best_estimator_\n",
+    "\n",
+    "    def select_model(self, X_train, y_train):\n",
+    "        # Define parameter grids for each model\n",
+    "        param_grids = {\n",
+    "            'RandomForest': {'n_estimators': [10, 50, 100], 'max_depth': [3, 5, 7]},\n",
+    "            'SVM': {'C': [0.1, 1, 10], 'kernel': ['linear', 'rbf']},\n",
+    "            'LogisticRegression': {'C': [0.01, 0.1, 1]}\n",
+    "        }\n",
+    "\n",
+    "        best_score = 0\n",
+    "        for model_name, model in self.models.items():\n",
+    "            print(f\"Tuning {model_name}...\")\n",
+    "            best_model = self.hyperparameter_tuning(model, param_grids[model_name], X_train, y_train)\n",
+    "            # Evaluate on training data to get best model\n",
+    "            score = accuracy_score(y_train, best_model.predict(X_train))\n",
+    "            print(f\"{model_name} score: {score}\")\n",
+    "\n",
+    "            if score > best_score:\n",
+    "                self.best_model = best_model\n",
+    "                best_score = score\n",
+    "\n",
+    "        print(f\"Best Model: {self.best_model}\")\n",
+    "        return self.best_model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "f6fba685",
+   "id": "89eeb204",
    "metadata": {},
    "outputs": [],
    "source": []
