os module added

--- a/AutoML.ipynb
+++ b/AutoML.ipynb
@@ -3,12 +3,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6807f7ee",
+   "id": "19889fca",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import os\n",
     "from sklearn.datasets import load_iris\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -21,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a07e2082",
+   "id": "65eb3595",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1866fb33",
+   "id": "bb38d358",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,8 +97,112 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "147c76df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Base Class for Evaluation\n",
+    "class Evaluator:\n",
+    "    def __init__(self, model):\n",
+    "        self.model = model\n",
+    "\n",
+    "    def evaluate(self, X_test, y_test):\n",
+    "        y_pred = self.model.predict(X_test)\n",
+    "        accuracy = accuracy_score(y_test, y_pred)\n",
+    "        report = classification_report(y_test, y_pred)\n",
+    "        return accuracy, report\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "25b8427c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Main AutoML Pipeline\n",
+    "class AutoMLPipeline:\n",
+    "    def __init__(self):\n",
+    "        self.dataset = Dataset()\n",
+    "        self.model_selector = ModelSelector()\n",
+    "        self.evaluator = None\n",
+    "\n",
+    "    def run(self):\n",
+    "        # Load and preprocess data\n",
+    "        print(\"Loading and Preprocessing Data...\")\n",
+    "        self.dataset.load_data()\n",
+    "        self.dataset.preprocess()\n",
+    "\n",
+    "        # Model Selection\n",
+    "        print(\"Selecting the best model...\")\n",
+    "        best_model = self.model_selector.select_model(self.dataset.X_train, self.dataset.y_train)\n",
+    "\n",
+    "        # Evaluation\n",
+    "        print(\"Evaluating the best model...\")\n",
+    "        self.evaluator = Evaluator(best_model)\n",
+    "        accuracy, report = self.evaluator.evaluate(self.dataset.X_test, self.dataset.y_test)\n",
+    "\n",
+    "        print(f\"Test Accuracy: {accuracy}\")\n",
+    "        print(f\"Classification Report: \\n{report}\")\n",
+    "\n",
+    "        # Save the best model\n",
+    "        print(\"Saving the best model...\")\n",
+    "        joblib.dump(best_model, \"best_model.pkl\")\n",
+    "        print(\"Model saved as best_model.pkl\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2936e03f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading and Preprocessing Data...\n",
+      "Selecting the best model...\n",
+      "Tuning RandomForest...\n",
+      "Fitting 5 folds for each of 9 candidates, totalling 45 fits\n",
+      "RandomForest score: 0.975\n",
+      "Tuning SVM...\n",
+      "Fitting 5 folds for each of 6 candidates, totalling 30 fits\n",
+      "SVM score: 0.975\n",
+      "Tuning LogisticRegression...\n",
+      "Fitting 5 folds for each of 3 candidates, totalling 15 fits\n",
+      "LogisticRegression score: 0.975\n",
+      "Best Model: RandomForestClassifier(max_depth=3, n_estimators=10)\n",
+      "Evaluating the best model...\n",
+      "Test Accuracy: 1.0\n",
+      "Classification Report: \n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00        10\n",
+      "           1       1.00      1.00      1.00         9\n",
+      "           2       1.00      1.00      1.00        11\n",
+      "\n",
+      "    accuracy                           1.00        30\n",
+      "   macro avg       1.00      1.00      1.00        30\n",
+      "weighted avg       1.00      1.00      1.00        30\n",
+      "\n",
+      "Saving the best model...\n",
+      "Model saved as best_model.pkl\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Run the AutoML pipeline\n",
+    "if __name__ == \"__main__\":\n",
+    "    pipeline = AutoMLPipeline()\n",
+    "    pipeline.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "89eeb204",
+   "id": "dca5e05b",
    "metadata": {},
    "outputs": [],
    "source": []
