ModelObject class added

--- a/AutoML.ipynb
+++ b/AutoML.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "19889fca",
+   "id": "c2fd8602",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,8 +21,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "dab43802",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Class to store and save the model details along with evaluation metrics\n",
+    "class ModelObject:\n",
+    "    def __init__(self, model_name, model, params, best_params, evaluation_metrics, version):\n",
+    "        self.model_name = model_name\n",
+    "        self.model = model\n",
+    "        self.params = params\n",
+    "        self.best_params = best_params\n",
+    "        self.evaluation_metrics = evaluation_metrics\n",
+    "        self.version = version"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
-   "id": "65eb3595",
+   "id": "206d8c25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bb38d358",
+   "id": "56fb7773",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "147c76df",
+   "id": "c773fed0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "25b8427c",
+   "id": "03003e64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2936e03f",
+   "id": "d93494f2",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dca5e05b",
+   "id": "59b03538",
    "metadata": {},
    "outputs": [],
    "source": []
