ModelObject log added and save function

--- a/AutoML.ipynb
+++ b/AutoML.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c2fd8602",
+   "id": "182485d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dab43802",
+   "id": "7f5e0f73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,13 +34,23 @@
     "        self.params = params\n",
     "        self.best_params = best_params\n",
     "        self.evaluation_metrics = evaluation_metrics\n",
-    "        self.version = version"
+    "        self.version = version\n",
+    "    def log_details(self):\n",
+    "        log_message = f\"Model: {self.model_name} (Version: {self.version})\\n\"\n",
+    "        log_message += f\"Initial Parameters: {self.params}\\n\"\n",
+    "        log_message += f\"Best Parameters after tuning: {self.best_params}\\n\"\n",
+    "        log_message += f\"Evaluation Metrics: {self.evaluation_metrics}\\n\"\n",
+    "        return log_message\n",
+    "\n",
+    "    def save(self, save_path):\n",
+    "        joblib.dump(self, save_path)\n",
+    "        print(f\"Model saved at: {save_path}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "206d8c25",
+   "id": "151c7402",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "56fb7773",
+   "id": "bf226ef1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c773fed0",
+   "id": "da71cdda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "03003e64",
+   "id": "2ce736f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d93494f2",
+   "id": "5d1ede15",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59b03538",
+   "id": "4a473d0d",
    "metadata": {},
    "outputs": [],
    "source": []
