ModelSelector class updated with versioning

--- a/AutoML.ipynb
+++ b/AutoML.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "182485d8",
+   "id": "6b6caae7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,8 +21,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7f5e0f73",
+   "execution_count": 13,
+   "id": "d7b4df4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "151c7402",
+   "id": "fb62da60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bf226ef1",
+   "id": "82b3424e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,6 +93,8 @@
     "            'LogisticRegression': LogisticRegression(max_iter=200)\n",
     "        }\n",
     "        self.best_model = None\n",
+    "        self.version = 1  # Versioning starts at 1\n",
+    "\n",
     "\n",
     "    def hyperparameter_tuning(self, model, param_grid, X_train, y_train):\n",
     "        grid_search = GridSearchCV(model, param_grid, cv=5, n_jobs=-1, verbose=1)\n",
@@ -110,23 +112,35 @@
     "        best_score = 0\n",
     "        for model_name, model in self.models.items():\n",
     "            print(f\"Tuning {model_name}...\")\n",
-    "            best_model = self.hyperparameter_tuning(model, param_grids[model_name], X_train, y_train)\n",
-    "            # Evaluate on training data to get best model\n",
-    "            score = accuracy_score(y_train, best_model.predict(X_train))\n",
-    "            print(f\"{model_name} score: {score}\")\n",
+    "            tuned_model, best_params = self.hyperparameter_tuning(model, param_grids[model_name], X_train, y_train)\n",
+    "            \n",
+    "            # Evaluate on test data\n",
+    "            y_pred = tuned_model.predict(X_test)\n",
+    "            accuracy = accuracy_score(y_test, y_pred)\n",
+    "            evaluation_metrics = classification_report(y_test, y_pred, output_dict=True)\n",
     "\n",
-    "            if score > best_score:\n",
-    "                self.best_model = best_model\n",
-    "                best_score = score\n",
+    "            print(f\"{model_name} Test Accuracy: {accuracy}\")\n",
     "\n",
-    "        print(f\"Best Model: {self.best_model}\")\n",
-    "        return self.best_model\n"
+    "            # Save model object only if it is the best one\n",
+    "            if accuracy > best_score:\n",
+    "                best_score = accuracy\n",
+    "                self.best_model_object = ModelObject(\n",
+    "                    model_name=model_name,\n",
+    "                    model=tuned_model,\n",
+    "                    params=param_grids[model_name],\n",
+    "                    best_params=best_params,\n",
+    "                    evaluation_metrics={\"accuracy\": accuracy, \"classification_report\": evaluation_metrics},\n",
+    "                    version=self.version\n",
+    "                )\n",
+    "\n",
+    "        print(f\"Best Model: {self.best_model_object.model_name}\")\n",
+    "        return self.best_model_object\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "da71cdda",
+   "id": "df0b9928",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2ce736f8",
+   "id": "1fa2a668",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5d1ede15",
+   "id": "1ed31f0f",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a473d0d",
+   "id": "caceb990",
    "metadata": {},
    "outputs": [],
    "source": []
