save model function added

--- a/AutoML.ipynb
+++ b/AutoML.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6b6caae7",
+   "id": "236afebc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d7b4df4a",
+   "id": "649303ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fb62da60",
+   "id": "0da2316a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "82b3424e",
+   "id": "ca60327b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,13 +134,20 @@
     "                )\n",
     "\n",
     "        print(f\"Best Model: {self.best_model_object.model_name}\")\n",
-    "        return self.best_model_object\n"
+    "        return self.best_model_object\n",
+    "\n",
+    "    def save_best_model(self):\n",
+    "        if self.best_model_object:\n",
+    "            # Create the model's versioned file name\n",
+    "            save_path = f\"{self.best_model_object.model_name}_v{self.version}.pkl\"\n",
+    "            self.best_model_object.save(save_path)\n",
+    "            self.version += 1  # Increment the version for the next save\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "df0b9928",
+   "id": "45194db5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1fa2a668",
+   "id": "9c6d0d8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1ed31f0f",
+   "id": "9ede07ff",
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "caceb990",
+   "id": "12cbabfb",
    "metadata": {},
    "outputs": [],
    "source": []
