Automlpipeline class modified to exclude evaluation class

--- a/AutoML.ipynb
+++ b/AutoML.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "236afebc",
+   "id": "f4b9a0c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "649303ec",
+   "id": "505b0dd5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0da2316a",
+   "id": "326a711e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ca60327b",
+   "id": "2dd088d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "45194db5",
+   "id": "a7914a94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9c6d0d8d",
+   "id": "b616e617",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,6 @@
     "    def __init__(self):\n",
     "        self.dataset = Dataset()\n",
     "        self.model_selector = ModelSelector()\n",
-    "        self.evaluator = None\n",
     "\n",
     "    def run(self):\n",
     "        # Load and preprocess data\n",
@@ -183,28 +182,21 @@
     "        self.dataset.load_data()\n",
     "        self.dataset.preprocess()\n",
     "\n",
-    "        # Model Selection\n",
+    "        # Model Selection and Evaluation\n",
     "        print(\"Selecting the best model...\")\n",
-    "        best_model = self.model_selector.select_model(self.dataset.X_train, self.dataset.y_train)\n",
+    "        best_model = self.model_selector.select_model(\n",
+    "            self.dataset.X_train, self.dataset.y_train, \n",
+    "            self.dataset.X_test, self.dataset.y_test\n",
+    "        )\n",
     "\n",
-    "        # Evaluation\n",
-    "        print(\"Evaluating the best model...\")\n",
-    "        self.evaluator = Evaluator(best_model)\n",
-    "        accuracy, report = self.evaluator.evaluate(self.dataset.X_test, self.dataset.y_test)\n",
-    "\n",
-    "        print(f\"Test Accuracy: {accuracy}\")\n",
-    "        print(f\"Classification Report: \\n{report}\")\n",
-    "\n",
-    "        # Save the best model\n",
-    "        print(\"Saving the best model...\")\n",
-    "        joblib.dump(best_model, \"best_model.pkl\")\n",
-    "        print(\"Model saved as best_model.pkl\")\n"
+    "        # Save the best model with versioning\n",
+    "        self.model_selector.save_best_model()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9ede07ff",
+   "id": "f563de5c",
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12cbabfb",
+   "id": "4659a204",
    "metadata": {},
    "outputs": [],
    "source": []
