--- a/AutoML.ipynb
+++ b/AutoML.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "fb00b56c",
+   "execution_count": 14,
+   "id": "d224524b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,8 +21,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "d264a090",
+   "execution_count": 15,
+   "id": "6f5195de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,8 +49,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "d41e1b77",
+   "execution_count": 16,
+   "id": "362f386f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,8 +79,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "60fef83a",
+   "execution_count": 17,
+   "id": "66ffada1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,8 +146,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "5e8ece7c",
+   "execution_count": 18,
+   "id": "8bd1f928",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,8 +176,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "5a758909",
+   "execution_count": 19,
+   "id": "1d211528",
    "metadata": {},
    "outputs": [
     {
@@ -185,32 +185,19 @@
      "output_type": "stream",
      "text": [
       "Loading and Preprocessing Data...\n",
-      "Selecting the best model...\n",
-      "Tuning RandomForest...\n",
-      "Fitting 5 folds for each of 9 candidates, totalling 45 fits\n",
-      "RandomForest score: 0.975\n",
-      "Tuning SVM...\n",
-      "Fitting 5 folds for each of 6 candidates, totalling 30 fits\n",
-      "SVM score: 0.975\n",
-      "Tuning LogisticRegression...\n",
-      "Fitting 5 folds for each of 3 candidates, totalling 15 fits\n",
-      "LogisticRegression score: 0.975\n",
-      "Best Model: RandomForestClassifier(max_depth=3, n_estimators=10)\n",
-      "Evaluating the best model...\n",
-      "Test Accuracy: 1.0\n",
-      "Classification Report: \n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       1.00      1.00      1.00        10\n",
-      "           1       1.00      1.00      1.00         9\n",
-      "           2       1.00      1.00      1.00        11\n",
-      "\n",
-      "    accuracy                           1.00        30\n",
-      "   macro avg       1.00      1.00      1.00        30\n",
-      "weighted avg       1.00      1.00      1.00        30\n",
-      "\n",
-      "Saving the best model...\n",
-      "Model saved as best_model.pkl\n"
+      "Selecting the best model...\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "ModelSelector.select_model() takes 3 positional arguments but 5 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [19], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m      3\u001b[0m     pipeline \u001b[38;5;241m=\u001b[39m AutoMLPipeline()\n\u001b[1;32m----> 4\u001b[0m     \u001b[43mpipeline\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn [18], line 15\u001b[0m, in \u001b[0;36mAutoMLPipeline.run\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# Model Selection and Evaluation\u001b[39;00m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSelecting the best model...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 15\u001b[0m best_model \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmodel_selector\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mselect_model\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m     16\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdataset\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdataset\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43my_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[0;32m     17\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdataset\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mX_test\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdataset\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43my_test\u001b[49m\n\u001b[0;32m     18\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;66;03m# Save the best model with versioning\u001b[39;00m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel_selector\u001b[38;5;241m.\u001b[39msave_best_model()\n",
+      "\u001b[1;31mTypeError\u001b[0m: ModelSelector.select_model() takes 3 positional arguments but 5 were given"
      ]
     }
    ],
@@ -224,10 +211,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e13ebfb",
+   "id": "d32c0296",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import joblib\n",
+    "\n",
+    "# Path to the saved model file (replace with your file path)\n",
+    "model_file_path = 'RandomForest_v1.pkl'\n",
+    "\n",
+    "# Load the ModelObject instance\n",
+    "loaded_model_object = joblib.load(model_file_path)\n",
+    "\n",
+    "# Inspect the contents of the loaded model object\n",
+    "print(f\"Model Name: {loaded_model_object.model_name}\")\n",
+    "print(f\"Version: {loaded_model_object.version}\")\n",
+    "print(f\"Parameters: {loaded_model_object.params}\")\n",
+    "print(f\"Best Parameters: {loaded_model_object.best_params}\")\n",
+    "print(f\"Evaluation Metrics: {loaded_model_object.evaluation_metrics}\")\n",
+    "\n",
+    "# To inspect the model itself, use the sklearn model's methods\n",
+    "model = loaded_model_object.model\n",
+    "print(f\"Model: {model}\")\n"
+   ]
   }
  ],
  "metadata": {
